@@ -1,3 +1,8 @@
+2018-03-27 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSIOThreadPool.m: Make the code use NSThread's designated
+	initialiser so that GSIOThread can be subclassed safely.
+
 2017-07-13 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSIOThreadPool.m: Make the -terminate: method safe to call from
